fixed button align in card

--- a/src/modules/CartPage/components/CartItem/CartItem.module.scss
+++ b/src/modules/CartPage/components/CartItem/CartItem.module.scss
@@ -118,5 +118,6 @@
     font-weight: 800;
     font-size: 22px;
     line-height: 140%;
+    width: 80px;
   }
 }
